W-14572243: Remove java ee libs